# snptool

./: .gitmodules  README.md  pyproject.toml
envmodules/snptool/: 0.3.0  0.6.1  0.6.2  0.7.0
extras/snptool/: 0.2.0  0.3.0  0.4.0
src/bimbam/: BIMBAMlocation.py  BIMBAMstream.py  BIMBAMstreamDS.py  BIMBAMstreamGP.py  BIMBAMstreamGT.py  __init__.py  cli.py
src/cli/: __init__.py  bimbam.py  extract.py  options.py  snptool.py  version.py
src/docs/: __init__.py  epilog.py  options.py
src/extract/: __init__.py  cli.py
src/genoinfo/: GenoInfo.py  __init__.py  cli.py
src/pkdbs/: SnptoolDatabase.py  SnptoolDbIterator.py  __init__.py  cli.py
src/pkstreamers/: SNPstreamer.py  __init__.py  handler.py  reader.py
src/snptool/: __init__.py  bimbam.py  cli.py  database.py  epilog.py  options.py  snptool.py  version.py
