
[build-system]
requires = [
    "setuptools>=49",
    "wheel",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[project]
name = "snptool"
authors = [
    { name = "Carsten Friis Rundsten", email = "carsten.rundsten@sund.ku.dk" },
]
description = "SNPTOOL is a collection of tools for working with SNPs or SNP-based formats."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU-GPLv3"}
dependencies = [
    "click>8.0",
    "isal>1.1.0",
    "pandas>2.0",
    "pysam>0.22.0",
]
dynamic = ["version"]

[project.scripts]
    snptool = "snptool:Snptool"
    SNPextractor = "extract:Extract"
    vcf2bimbam = "bimbam:Bimbam"
    vcf2genoinfo = "genoinfo:Genoinfo"

[tool.setuptools.dynamic]
version = {attr = "snptool.version.__version__"}

